Converted some .svg to .png.

--- a/assets/css/addBookBtn.scss
+++ b/assets/css/addBookBtn.scss
@@ -19,7 +19,7 @@
   &:hover {
     transform: scale(1.1);
     background-color: #E76F51;
-    background-image: url('/assets/images/add-book-dark.svg');
+    background-image: url('/assets/images/add-book-dark.png');
   }
 
   #add-book-icon {
