--- a/app.css
+++ b/app.css
@@ -98,7 +98,7 @@ footer .credits {
 .add-book-btn:hover {
   transform: scale(1.1);
   background-color: #E76F51;
-  background-image: url("/assets/images/add-book-dark.svg");
+  background-image: url("/assets/images/add-book-dark.png");
 }
 .add-book-btn #add-book-icon {
   height: 30px;
