--- a/assets/css/addBookBtn.scss
+++ b/assets/css/addBookBtn.scss
@@ -4,7 +4,7 @@
   border-radius: 50%;
 
   background-color: #E9C46A;
-  background-image: url('/assets/images/add-book-light.svg');
+  background-image: url('/assets/images/add-book-light.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 30px 30px;
