Changed some img src directory.

--- a/app.css
+++ b/app.css
@@ -85,7 +85,7 @@ footer .credits {
   width: 50px;
   border-radius: 50%;
   background-color: #E9C46A;
-  background-image: url("/assets/images/add-book-light.png");
+  background-image: url("./assets/images/add-book-light.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 30px 30px;
@@ -98,7 +98,7 @@ footer .credits {
 .add-book-btn:hover {
   transform: scale(1.1);
   background-color: #E76F51;
-  background-image: url("/assets/images/add-book-dark.png");
+  background-image: url("./assets/images/add-book-dark.png");
 }
 .add-book-btn #add-book-icon {
   height: 30px;
