--- a/app.css
+++ b/app.css
@@ -43,7 +43,15 @@ header #app-title {
 }
 
 #app-body {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-auto-rows: 150px;
+  grid-gap: 1rem;
+  justify-items: center;
   min-height: calc(100vh - 175px);
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 1rem 0;
   position: relative;
 }
 
@@ -84,12 +92,12 @@ footer .credits {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  background-color: #E9C46A;
+  background-color: #e63946;
   background-image: url("./assets/images/add-book-light.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 30px 30px;
-  position: absolute;
+  position: fixed;
   bottom: 80px;
   right: 30px;
   transition: all 0.5s;
@@ -97,7 +105,6 @@ footer .credits {
 }
 .add-book-btn:hover {
   transform: scale(1.1);
-  background-color: #E76F51;
   background-image: url("./assets/images/add-book-dark.png");
 }
 .add-book-btn #add-book-icon {
@@ -127,18 +134,30 @@ footer .credits {
 }
 @keyframes from-btn {
   from {
-    transform: translate(0, 0) scale(0);
+    transform: translate(100%, 0) scale(0);
+    transform-origin: center;
   }
   to {
     transform: translate(-50%, -50%) scale(1);
+    transform-origin: center;
   }
 }
 @keyframes to-btn {
   from {
     transform: translate(-50%, -50%) scale(1);
+    transform-origin: center;
   }
   to {
-    transform: translate(0, 0) scale(0);
+    transform: translate(100%, 100%) scale(0);
+    transform-origin: center;
+  }
+}
+@keyframes popin {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
   }
 }
 #modal-container {
@@ -151,6 +170,7 @@ footer .credits {
 #modal-container #modal {
   max-height: 100vh;
   max-width: 100vw;
+  height: 750px;
   width: 500px;
   margin: 1rem 0;
   padding: 1rem;
@@ -160,21 +180,26 @@ footer .credits {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
+  transition: all 0.5s;
 }
 #modal-container #modal form {
   display: grid;
+  justify-content: center;
 }
 #modal-container #modal form > * {
   margin-bottom: 1rem;
 }
 #modal-container #modal p {
   font-size: 20px;
+  text-align: center;
+  margin-top: 1.5rem;
 }
 #modal-container #modal input,
 #modal-container #modal button {
   font-size: 20px;
   height: 3rem;
   max-width: 90vw;
+  width: 400px;
   border: 1px solid rgba(38, 70, 83, 0.2);
   box-shadow: 5px 5px 0 #264653;
   transition: all 0.5s;
@@ -217,6 +242,41 @@ footer .credits {
 
 .modal-inactive {
   animation: to-btn 0.5s forwards;
+}
+
+.card {
+  background-color: #e9c46a;
+  box-shadow: 5px 5px 0 #e76f51;
+  max-height: 150px;
+  max-width: 90vw;
+  min-width: 300px;
+  padding: 0.5rem;
+  position: relative;
+}
+.card .fa-times, .card .edit-btn {
+  display: none;
+  position: absolute;
+  transition: all 0.5s;
+}
+.card .fa-times:hover, .card .edit-btn:hover {
+  color: white;
+  cursor: pointer;
+}
+.card .fa-times {
+  top: 0.9rem;
+  right: 1rem;
+  font-size: 20px;
+}
+.card .edit-btn {
+  top: 1rem;
+  right: 2.5rem;
+}
+.card .active {
+  display: block;
+}
+
+.close {
+  animation: popin 0.5s reverse;
 }
 
 * {
