--- a/assets/css/addBookBtn.scss
+++ b/assets/css/addBookBtn.scss
@@ -3,13 +3,13 @@
   width: 50px;
   border-radius: 50%;
 
-  background-color: #E9C46A;
+  background-color: #e63946;
   background-image: url('./assets/images/add-book-light.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 30px 30px;
 
-  position: absolute;
+  position: fixed;
   bottom: 80px;
   right: 30px;
 
@@ -18,7 +18,6 @@
 
   &:hover {
     transform: scale(1.1);
-    background-color: #E76F51;
     background-image: url('./assets/images/add-book-dark.png');
   }
 
