--- a/assets/css/addNewBookModal.scss
+++ b/assets/css/addNewBookModal.scss
@@ -1,4 +1,4 @@
-@import 'animations';
+@import "animations";
 
 #modal-container {
   height: 100vh;
@@ -11,6 +11,7 @@
   #modal {
     max-height: 100vh;
     max-width: 100vw;
+    height: 750px;
     width: 500px;
     margin: 1rem 0;
     padding: 1rem;
@@ -23,9 +24,11 @@
 
     background-color: white;
 
+    transition: all 0.5s;
 
     form {
       display: grid;
+      justify-content: center;
 
       & > * {
         margin-bottom: 1rem;
@@ -34,6 +37,8 @@
 
     p {
       font-size: 20px;
+      text-align: center;
+      margin-top: 1.5rem;
     }
 
     input,
@@ -41,6 +46,7 @@
       font-size: 20px;
       height: 3rem;
       max-width: 90vw;
+      width: 400px;
       border: 1px solid rgba(38, 70, 83, 0.2);
       box-shadow: 5px 5px 0 #264653;
       transition: all 0.5s;
@@ -49,15 +55,14 @@
       &:hover {
         box-shadow: none;
       }
-      
     }
 
     .add-btn {
-        background-color: #2a9d8f;
-      }
-      .clear-btn {
-        background-color: #e76f51;
-      }
+      background-color: #2a9d8f;
+    }
+    .clear-btn {
+      background-color: #e76f51;
+    }
 
     .fa-times {
       position: absolute;
