--- a/assets/css/appBody.scss
+++ b/assets/css/appBody.scss
@@ -1,6 +1,16 @@
 @import 'variables';
 
 #app-body { 
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-auto-rows: 150px;
+  grid-gap: 1rem;
+  justify-items: center;
+
   min-height: $app-body-height;
+  max-width: 1000px;
+  
+  margin: 0 auto;
+  padding: 1rem 0;
   position: relative;
 }
