--- a/assets/css/addNewBookModal.scss
+++ b/assets/css/addNewBookModal.scss
@@ -11,7 +11,7 @@
   #modal {
     max-height: 100vh;
     max-width: 100vw;
-    height: 750px;
+    height: auto;
     width: 500px;
     margin: 1rem 0;
     padding: 1rem;
@@ -33,31 +33,39 @@
       & > * {
         margin-bottom: 1rem;
       }
+
+      input,
+      button {
+        font-size: 20px;
+        height: 3rem;
+        max-width: 90vw;
+        width: 450px;
+        border: 1px solid rgba(38, 70, 83, 0.2);
+        box-shadow: 5px 5px 0 #264653;
+        transition: all 0.5s;
+        cursor: pointer;
+
+        &:hover {
+          box-shadow: none;
+        }
+      }
+
+      label {
+        max-width: 400px;
+      }
     }
 
     p {
       font-size: 20px;
       text-align: center;
+      max-width: 400px;
+    }
+
+    .success-msg {
       margin-top: 1.5rem;
     }
 
-    input,
-    button {
-      font-size: 20px;
-      height: 3rem;
-      max-width: 90vw;
-      width: 400px;
-      border: 1px solid rgba(38, 70, 83, 0.2);
-      box-shadow: 5px 5px 0 #264653;
-      transition: all 0.5s;
-      cursor: pointer;
-
-      &:hover {
-        box-shadow: none;
-      }
-    }
-
-    .add-btn {
+    .add-btn, .save-btn {
       background-color: #2a9d8f;
     }
     .clear-btn {
@@ -94,5 +102,5 @@
 }
 
 .modal-inactive {
-  animation: to-btn 0.5s forwards;
+  animation: modal-popin 0.5s reverse;
 }
