--- a/assets/css/animations.scss
+++ b/assets/css/animations.scss
@@ -24,18 +24,18 @@
     transform-origin: center;
   }
 }
-@keyframes to-btn {
+@keyframes modal-popin {
   from {
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(0);
     transform-origin: center;
   }
   to {
-    transform: translate(100%, 100%) scale(0);
+    transform: translate(-50%, -50%) scale(1);
     transform-origin: center;
   }
 }
 
-@keyframes popin {
+@keyframes card-popin {
   from {transform: scale(0);}
   to {transform: scale(1);}
 }
