--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -2,13 +2,18 @@
   background-color: #e9c46a;
   box-shadow: 5px 5px 0 #e76f51;
 
-  max-height: 150px;
+  min-height: 150px;
+  height: 200px;
+  max-height: 300px;
   max-width: 90vw;
+  width: 300px;
   min-width: 300px;
 
   padding: 0.5rem;
 
   position: relative;
+
+  transition: all 0.5s;
 
   .fa-times, .edit-btn {
     display: none;
@@ -22,13 +27,13 @@
   }
 
   .fa-times {
-    top: 0.9rem;
+    bottom: 1.1rem;
     right: 1rem;
     font-size: 20px;
   }
 
   .edit-btn {
-    top: 1rem;
+    bottom: 1rem;
     right: 2.5rem;
   }
 
@@ -38,5 +43,5 @@
 }
 
 .close{
-  animation: popin 0.5s reverse;
+  transform: scale(0);
 }
