--- a/app.css
+++ b/app.css
@@ -75,6 +75,13 @@ header #app-title {
   max-width: 800px;
 }
 
+.load-books {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  min-height: 1.5rem;
+}
+
 footer {
   background-color: #2A9D8F;
   height: 50px;
@@ -170,7 +177,7 @@ footer .credits {
 #modal-container #modal {
   max-height: 100vh;
   max-width: 100vw;
-  height: auto;
+  height: 750px;
   width: 500px;
   margin: 1rem 0;
   padding: 1rem;
@@ -254,8 +261,8 @@ footer .credits {
   background-color: #e9c46a;
   box-shadow: 5px 5px 0 #e76f51;
   min-height: 150px;
-  height: 200px;
-  max-height: 300px;
+  height: auto;
+  max-height: 100vh;
   max-width: 90vw;
   width: 300px;
   min-width: 300px;
@@ -283,6 +290,10 @@ footer .credits {
 }
 .card .active {
   display: block;
+}
+.card h2 {
+  max-width: 90vw;
+  overflow-wrap: break-word;
 }
 
 .close {
