--- a/assets/css/addNewBookModal.scss
+++ b/assets/css/addNewBookModal.scss
@@ -11,7 +11,7 @@
   #modal {
     max-height: 100vh;
     max-width: 100vw;
-    height: auto;
+    height: 750px;
     width: 500px;
     margin: 1rem 0;
     padding: 1rem;
