--- a/assets/css/emptyAppBody.scss
+++ b/assets/css/emptyAppBody.scss
@@ -20,3 +20,11 @@
 
   max-width: 800px;
 }
+
+.load-books {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+
+  min-height: 1.5rem;
+}
